--- a/DataDictionary.ipynb
+++ b/DataDictionary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMNGZC9AYM/9EDokMgNYQu2",
+      "authorship_tag": "ABX9TyP1yZkx82NT1dnYXL9nsDwt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4242,12 +4242,12 @@
         "Tables1_county = pd.read_excel(DD, 'Tables1', skiprows = 1, nrows=40,  usecols= 'A')\n",
         "Tables1_harmfulEvent = pd.read_excel(DD, 'Tables1', skiprows = 1, nrows=40,  usecols= 'B,D')\n",
         "Tables1_trafficControl = pd.read_excel(DD, 'Tables1', skiprows = 42, nrows=20,  usecols= 'A,D')\n",
-        "Tables1_seatingPosition = pd.read_excel(DD, 'Tables1', skiprows = 1, nrows=31,  usecols= 'E')\n"
+        "Tables1_seatingPosition = pd.read_excel(DD, 'Tables1', skiprows = 0, nrows=31,  usecols= 'E')\n"
       ],
       "metadata": {
         "id": "WREnT1qpPsDc"
       },
-      "execution_count": 397,
+      "execution_count": 420,
       "outputs": []
     },
     {
@@ -4256,7 +4256,7 @@
         "dataDict_Table1 = defaultdict(dict)                    #Build the Data Dictionary\n",
         "\n",
         "#print(Tables1_county.columns)\n",
-        "dataDict_Table1[\"County Name\"][\"DATA\"] = {}\n",
+        "dataDict_Table1[\"County_Name\"][\"DATA\"] = {}\n",
         "\n",
         "for idx, series in Tables1_county.iterrows():   #Step through each var in turn\n",
         "  \n",
@@ -4265,7 +4265,7 @@
         "  kvPairList = getKVPairs(desc)                 #Get list (K,V) tuples for DATA\n",
         "  kvPairTuple = tuple(kvPairList[0])\n",
         "\n",
-        "  dataDict_Table1[\"County Name\"][\"DATA\"][kvPairTuple[0]] = kvPairTuple[1]\n",
+        "  dataDict_Table1[\"County_Name\"][\"DATA\"][kvPairTuple[0]] = kvPairTuple[1]\n",
         "\n",
         "\n",
         "\n"
@@ -4273,7 +4273,7 @@
       "metadata": {
         "id": "KvhW7AipPsHe"
       },
-      "execution_count": 398,
+      "execution_count": 422,
       "outputs": []
     },
     {
@@ -4281,7 +4281,7 @@
       "source": [
         "#Parse out the Harmful Event Data from Table1\n",
         "\n",
-        "dataDict_Table1[\"Harmful Event\"][\"DATA\"] = {}\n",
+        "dataDict_Table1[\"Harmful_Event\"][\"DATA\"] = {}\n",
         "\n",
         "for idx, series in Tables1_harmfulEvent.iterrows():   #Step through each var in turn\n",
         "  \n",
@@ -4305,28 +4305,26 @@
         "    pass\n",
         "\n",
         "  try:                                           #Update the Dicts\n",
-        "    dataDict_Table1[\"Harmful Event\"][\"DATA\"][kvPairTuple1[0]] = kvPairTuple1[1]\n",
+        "    dataDict_Table1[\"Harmful_Event\"][\"DATA\"][kvPairTuple1[0]] = kvPairTuple1[1]\n",
         "  except NameError:\n",
         "    pass\n",
         "  try:\n",
-        "    dataDict_Table1[\"Harmful Event\"][\"DATA\"][kvPairTuple2[0]] = kvPairTuple2[1]\n",
+        "    dataDict_Table1[\"Harmful_Event\"][\"DATA\"][kvPairTuple2[0]] = kvPairTuple2[1]\n",
         "  except NameError:\n",
         "    pass"
       ],
       "metadata": {
         "id": "Ofy--07EPsOQ"
       },
-      "execution_count": 405,
+      "execution_count": 423,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#Parse out the Harmful Event Data from Table1\n",
+        "#Parse out the Traffic Control Data from Table1\n",
         "\n",
-        "print(Tables1_trafficControl.columns)\n",
-        "\n",
-        "dataDict_Table1[\"Traffic Control\"][\"DATA\"] = {}\n",
+        "dataDict_Table1[\"Traffic_Control\"][\"DATA\"] = {}\n",
         "\n",
         "for idx, series in Tables1_trafficControl.iterrows():   #Step through each var in turn\n",
         "  \n",
@@ -4349,51 +4347,226 @@
         "    pass\n",
         "\n",
         "  try:                                           #Update the Dicts\n",
-        "    dataDict_Table1[\"Traffic Control\"][\"DATA\"][kvPairTuple1[0]] = kvPairTuple1[1]\n",
+        "    dataDict_Table1[\"Traffic_Control\"][\"DATA\"][kvPairTuple1[0]] = kvPairTuple1[1]\n",
         "  except NameError:\n",
         "    pass\n",
         "  try:\n",
-        "    dataDict_Table1[\"Traffic Control\"][\"DATA\"][kvPairTuple2[0]] = kvPairTuple2[1]\n",
+        "    dataDict_Table1[\"Traffic_Control\"][\"DATA\"][kvPairTuple2[0]] = kvPairTuple2[1]\n",
         "  except NameError:\n",
         "    pass"
       ],
       "metadata": {
-        "id": "6S8joujnY4g6",
-        "outputId": "35f5200b-a166-4f1b-8b77-2cdef65f6219",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "6S8joujnY4g6"
       },
-      "execution_count": 409,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Index(['TRAFFIC CONTROL DEVICE', 'Unnamed: 3'], dtype='object')\n"
-          ]
-        }
-      ]
+      "execution_count": 425,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(dataDict_Table1[\"Traffic Control\"].items())"
+        "#Parse out the Seating Positions\n",
+        "dataDict_Table1[\"Seating_Position\"][\"DATA\"] = {}\n",
+        "\n",
+        "for idx, series in Tables1_seatingPosition.iterrows():   #Step through each var in turn\n",
+        "  \n",
+        "  desc = series['SEATING POSITION']\n",
+        "\n",
+        "  kvPairList = getKVPairs(desc)                 #Get list (K,V) tuples for DATA\n",
+        "  try:\n",
+        "    kvPairTuple = tuple(kvPairList[0])\n",
+        "    dataDict_Table1[\"Seating_Position\"][\"DATA\"][kvPairTuple[0]] = kvPairTuple[1]\n",
+        "  except IndexError:\n",
+        "    pass"
       ],
       "metadata": {
-        "id": "O2kP0tqeaoJj",
-        "outputId": "8ca236d2-16e1-4ef3-c27c-9f4cd682140a",
+        "id": "9WKk5wImbHF3"
+      },
+      "execution_count": 426,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "json_Table1 = json.dumps(dataDict_Table1, indent = 4) \n",
+        "print(json_Table1)"
+      ],
+      "metadata": {
+        "id": "VQW5rCcicHjP",
+        "outputId": "5db41626-ea68-41b6-b9c1-e5a2aeb855ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 410,
+      "execution_count": 427,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "dict_items([('DATA', {'0': 'No Controls', '99': 'Unknown', '1': 'Traffic Control Signal (on colors), without Pedestrian Signal', '2': 'Traffic Control Signal (on colors), with Pedestrian Signal', '3': 'Traffic Control Signal (on colors), Pedestrian Signal unknown', '4': 'Flashing Traffic Control Signal', '5': 'Flashing Beacon', '6': 'Flashing Highway Traffic Signal, type unknown', '7': 'Lane Use Control Signal', '8': 'Other Highway Traffic Signal', '9': 'Unknown Highway Traffic Signal', '20': 'Stop Sign', '21': 'Yield Sign', '23': 'School Zone Sign/Device', '28': 'Other Regulatory Sign', '29': 'Unknown Regulatory Sign', '30': 'School Speed Limit', '31': 'School Advance/Crossing', '38': 'Other School Related', '39': 'Unknown School Zone Sign'})])\n"
+            "{\n",
+            "    \"County_Name\": {\n",
+            "        \"DATA\": {\n",
+            "            \"1\": \"Adams\",\n",
+            "            \"3\": \"Asotin\",\n",
+            "            \"5\": \"Benton\",\n",
+            "            \"7\": \"Chelan\",\n",
+            "            \"9\": \"Clallam\",\n",
+            "            \"11\": \"Clark\",\n",
+            "            \"13\": \"Columbia\",\n",
+            "            \"15\": \"Cowlitz\",\n",
+            "            \"17\": \"Douglas\",\n",
+            "            \"19\": \"Ferry\",\n",
+            "            \"21\": \"Franklin\",\n",
+            "            \"23\": \"Garfield\",\n",
+            "            \"25\": \"Grant\",\n",
+            "            \"27\": \"Grays Harbor\",\n",
+            "            \"29\": \"Island\",\n",
+            "            \"31\": \"Jefferson\",\n",
+            "            \"33\": \"King\",\n",
+            "            \"35\": \"Kitsap\",\n",
+            "            \"37\": \"Kittitas\",\n",
+            "            \"39\": \"Klickitat\",\n",
+            "            \"41\": \"Lewis\",\n",
+            "            \"43\": \"Lincoln\",\n",
+            "            \"45\": \"Mason\",\n",
+            "            \"47\": \"Okanogan\",\n",
+            "            \"49\": \"Pacific\",\n",
+            "            \"51\": \"Pend Oreiile\",\n",
+            "            \"53\": \"Pierce\",\n",
+            "            \"55\": \"San Juan\",\n",
+            "            \"57\": \"Skagit\",\n",
+            "            \"59\": \"Skamania\",\n",
+            "            \"61\": \"Snohomish\",\n",
+            "            \"63\": \"Spokane\",\n",
+            "            \"65\": \"Stevens\",\n",
+            "            \"67\": \"Thurston\",\n",
+            "            \"69\": \"Wahkiakum\",\n",
+            "            \"71\": \"Walla Walla\",\n",
+            "            \"73\": \"Whatcom\",\n",
+            "            \"75\": \"Whitman\",\n",
+            "            \"77\": \"Yakima\",\n",
+            "            \"99\": \". or missing, unknown\"\n",
+            "        }\n",
+            "    },\n",
+            "    \"Harmful_Event\": {\n",
+            "        \"DATA\": {\n",
+            "            \"01\": \"Rollover/Overturn\",\n",
+            "            \"99\": \"Unknown\",\n",
+            "            \"02\": \"Fire/Explosion\",\n",
+            "            \"03\": \"Immersion or Partial Immersion\",\n",
+            "            \"04\": \"Gas Inhalation\",\n",
+            "            \"05\": \"Fell/Jumped from Vehicle\",\n",
+            "            \"06\": \"Injured in Vehicle (Non-Collision)\",\n",
+            "            \"07\": \"Other Non-Collision\",\n",
+            "            \"16\": \"Thrown or Falling Object\",\n",
+            "            \"44\": \"Pavement Surface Irregularity (Ruts, Potholes, Grates, etc.)\",\n",
+            "            \"51\": \"Jackknife (harmful to this vehicle)\",\n",
+            "            \"72\": \"Cargo/Equipment Loss, Shift, or damage (harmful)\",\n",
+            "            \"12\": \"Motor Vehicle In-Transport\",\n",
+            "            \"54\": \"Motor Vehicle In-Transport Strikes or is Struck by Cargo, Persons or\",\n",
+            "            \"55\": \"Motor Vehicle In Motion Outside the Trafficway\",\n",
+            "            \"08\": \"Pedestrian\",\n",
+            "            \"15\": \"Non-Motorist on Personal Conveyance\",\n",
+            "            \"09\": \"Pedalcyclist\",\n",
+            "            \"18\": \"Other Object (Not Fixed)\",\n",
+            "            \"10\": \"Railway Vehicle\",\n",
+            "            \"45\": \"Working Motor Vehicle\",\n",
+            "            \"11\": \"Live Animal\",\n",
+            "            \"49\": \"Ridden Animal or Animal Drawn Conveyance\",\n",
+            "            \"14\": \"Parked Motor Vehicle\",\n",
+            "            \"73\": \"Object Fell From Motor Vehicle In-Transport (since\",\n",
+            "            \"74\": \"Road Vehicle on Rails (since\",\n",
+            "            \"91\": \"Unknown Object Not Fixed\",\n",
+            "            \"17\": \"Boulder\",\n",
+            "            \"39\": \"Wall\",\n",
+            "            \"19\": \"Building\",\n",
+            "            \"40\": \"Fire Hydrant\",\n",
+            "            \"20\": \"Impact Attenuator/Crash Cushion\",\n",
+            "            \"41\": \"Shrubbery\",\n",
+            "            \"21\": \"Bridge Pier or Support\",\n",
+            "            \"42\": \"Tree (Standing Only)\",\n",
+            "            \"23\": \"Bridge Rail (Includes Parapet)\",\n",
+            "            \"43\": \"Other Fixed Object\",\n",
+            "            \"24\": \"Guardrail Face\",\n",
+            "            \"46\": \"Traffic Signal Support\",\n",
+            "            \"25\": \"Concrete Traffic Barrier\",\n",
+            "            \"48\": \"Snow Bank\",\n",
+            "            \"26\": \"Other Traffic Barrier\",\n",
+            "            \"50\": \"Bridge Overhead Structure\",\n",
+            "            \"30\": \"Utility Pole/Light Support\",\n",
+            "            \"52\": \"Guardrail End\",\n",
+            "            \"31\": \"Other Post, Other Pole, Other Supports\",\n",
+            "            \"53\": \"Mail Box\",\n",
+            "            \"32\": \"Culvert\",\n",
+            "            \"57\": \"Cable Barrier\",\n",
+            "            \"33\": \"Curb\",\n",
+            "            \"58\": \"Ground\",\n",
+            "            \"34\": \"Ditch\",\n",
+            "            \"93\": \"Unknown Fixed Object\",\n",
+            "            \"35\": \"Embankment\",\n",
+            "            \"98\": \"Harmful Event, Details not Reported\",\n",
+            "            \"38\": \"Fence\"\n",
+            "        }\n",
+            "    },\n",
+            "    \"Traffic_Control\": {\n",
+            "        \"DATA\": {\n",
+            "            \"0\": \"No Controls\",\n",
+            "            \"99\": \"Unknown\",\n",
+            "            \"1\": \"Traffic Control Signal (on colors), without Pedestrian Signal\",\n",
+            "            \"2\": \"Traffic Control Signal (on colors), with Pedestrian Signal\",\n",
+            "            \"3\": \"Traffic Control Signal (on colors), Pedestrian Signal unknown\",\n",
+            "            \"4\": \"Flashing Traffic Control Signal\",\n",
+            "            \"5\": \"Flashing Beacon\",\n",
+            "            \"6\": \"Flashing Highway Traffic Signal, type unknown\",\n",
+            "            \"7\": \"Lane Use Control Signal\",\n",
+            "            \"8\": \"Other Highway Traffic Signal\",\n",
+            "            \"9\": \"Unknown Highway Traffic Signal\",\n",
+            "            \"20\": \"Stop Sign\",\n",
+            "            \"21\": \"Yield Sign\",\n",
+            "            \"23\": \"School Zone Sign/Device\",\n",
+            "            \"28\": \"Other Regulatory Sign\",\n",
+            "            \"29\": \"Unknown Regulatory Sign\",\n",
+            "            \"30\": \"School Speed Limit\",\n",
+            "            \"31\": \"School Advance/Crossing\",\n",
+            "            \"38\": \"Other School Related\",\n",
+            "            \"39\": \"Unknown School Zone Sign\"\n",
+            "        }\n",
+            "    },\n",
+            "    \"Seating_Position\": {\n",
+            "        \"DATA\": {\n",
+            "            \"0\": \"Not a Motor Vehicle Occupant (\",\n",
+            "            \"11\": \"Front Seat \\u2013 Left Side (Driver)\",\n",
+            "            \"12\": \"Front Seat \\u2013 Middle\",\n",
+            "            \"13\": \"Front Seat \\u2013 Right Side\",\n",
+            "            \"18\": \"Front Seat \\u2013 Other\",\n",
+            "            \"19\": \"Front Seat \\u2013 Unknown\",\n",
+            "            \"21\": \"Second Seat \\u2013 Left Side\",\n",
+            "            \"22\": \"Second Seat \\u2013 Middle\",\n",
+            "            \"23\": \"Second Seat \\u2013 Right Side\",\n",
+            "            \"28\": \"Second Seat \\u2013 Other\",\n",
+            "            \"29\": \"Second Seat \\u2013 Unknown\",\n",
+            "            \"31\": \"Third Seat \\u2013 Left Side\",\n",
+            "            \"32\": \"Third Seat \\u2013 Middle\",\n",
+            "            \"33\": \"Third Seat \\u2013 Right Side\",\n",
+            "            \"38\": \"Third Seat \\u2013 Other\",\n",
+            "            \"39\": \"Third Seat \\u2013 Unknown\",\n",
+            "            \"41\": \"Fourth Seat \\u2013 Left Side\",\n",
+            "            \"42\": \"Fourth Seat \\u2013 Middle\",\n",
+            "            \"43\": \"Fourth Seat \\u2013 Right Side\",\n",
+            "            \"48\": \"Fourth Seat \\u2013 Other\",\n",
+            "            \"49\": \"Fourth Seat \\u2013 Unknown\",\n",
+            "            \"50\": \"Sleeper Section of Cab (Truck)\",\n",
+            "            \"51\": \"Other Passenger in Enclosed Passenger / Cargo Area\",\n",
+            "            \"52\": \"Other Passenger in Unenclosed Passenger / Cargo Area\",\n",
+            "            \"53\": \"Other Passenger in Passenger / Cargo Area,\",\n",
+            "            \"54\": \"Trailing Unit\",\n",
+            "            \"55\": \"Riding on Vehicle Exterior\",\n",
+            "            \"98\": \"Not Reported\",\n",
+            "            \"99\": \"Unknown\",\n",
+            "            \"56\": \"Appended to a Motor Vehicle for Motion\"\n",
+            "        }\n",
+            "    }\n",
+            "}\n"
           ]
         }
       ]
