--- a/DataDictionary.ipynb
+++ b/DataDictionary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMx/r7FlfUNM3C7TMa14KHM",
+      "authorship_tag": "ABX9TyPjW4TA+t/sAwLiti1AldUS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,6 +181,65 @@
         "id": "S3GvxIrQ4eZa"
       },
       "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def getKVPairsSpaceDelimited(desc):\n",
+        "  #print(\"Checking\", desc)\n",
+        "                                                #Init Vars\n",
+        "  number = \"\"\n",
+        "  definition = \"\"\n",
+        "  keyList = []\n",
+        "  definitionList = []\n",
+        "  keyFound = False\n",
+        "  lastCharNumeric = False\n",
+        "                                                #Filter out non-strings\n",
+        "  if type(desc) == str:\n",
+        "    for char in desc:\n",
+        "\n",
+        "      #print(\"Char=\", char, \"LastCharNumeric:\",lastCharNumeric)\n",
+        "      \n",
+        "      if char.isnumeric() == True:              #Build the Keys\n",
+        "        if keyFound == True:\n",
+        "          definition = definition.strip(\"\\n\")\n",
+        "          definition = definition.strip()\n",
+        "          definitionList.append(definition)\n",
+        "          definition = \"\"\n",
+        "          keyFound = False\n",
+        "          number += char\n",
+        "          #print(\"definition = \", definition)\n",
+        "\n",
+        "        else:                                   #Build the Values\n",
+        "          number += char\n",
+        "          lastCharNumeric = True\n",
+        "\n",
+        "\n",
+        "      elif char == (\" \") and lastCharNumeric == True:    #Commit the Key\n",
+        "        keyList.append(number)\n",
+        "        #print(\"Key Found\", number)\n",
+        "        number = \"\"\n",
+        "        keyFound = True\n",
+        "        lastCharNumeric == False\n",
+        "\n",
+        "      else:                                     #Build the value\n",
+        "        definition += char \n",
+        "    else:\n",
+        "      pass\n",
+        "                                                #Add the last Definition\n",
+        "    definition = definition.strip(\"\\n\")\n",
+        "    definition = definition.strip()\n",
+        "    definitionList.append(definition)\n",
+        "\n",
+        "  toReturn = list(zip(keyList,definitionList))  #Create a list of (K,V) Tuples\n",
+        "\n",
+        "  return(toReturn)    "
+      ],
+      "metadata": {
+        "id": "cugkP-RFq8KV"
+      },
+      "execution_count": 188,
       "outputs": []
     },
     {
@@ -499,12 +558,12 @@
         "Tables2_driverViolations"
       ],
       "metadata": {
-        "id": "XYddvDfkkLmV",
-        "outputId": "4d8ef44f-d47f-4907-88a6-3937e3927376",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "id": "XYddvDfkkLmV",
+        "outputId": "4d8ef44f-d47f-4907-88a6-3937e3927376"
       },
       "execution_count": 127,
       "outputs": [
@@ -829,32 +888,74 @@
     {
       "cell_type": "code",
       "source": [
-        "#Parse out the PersonRelatedFactors Numbering System\n",
-        "dataDict_Table3 = defaultdict(dict)                    #Build the Data Dictionary\n",
+        "#Parse out the PersonRelatedFactors Numbering System from Tables3\n",
+        "dataDict_Table3 = defaultdict(dict)                  #Build the Data Dictionary\n",
+        "                                                      #For all Table 3\n",
         "\n",
-        "Tables3_personRelatedFactors.columns\n",
-        "dataDict_Table3[\"Person_Related_Factors\"][\"DATA\"] = {}"
+        "dataDict_Table3[\"Person_Related_Factors\"][\"DATA\"] = {}  #Create Keys for PRF\n",
+        "prf_flattenedList = []\n",
+        "\n",
+        "for idx, series in Tables3_personRelatedFactors.iterrows(): \n",
+        "\n",
+        "  prf_desc = series['PERSON-RELATED FACTORS']\n",
+        "\n",
+        "  kvPairList = getKVPairs(prf_desc)                 #Get list (K,V) tuples for DATA\n",
+        "  \n",
+        "  prf_flattenedList += flattenLists(kvPairList)     #Flatten into a list of tuples\n",
+        "  \n",
+        "for tup in prf_flattenedList:                       #Build the dictionary from tuples\n",
+        "  dataDict_Table3[\"Person_Related_Factors\"][\"DATA\"][tup[0]] = tup[1]\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "HrIqG71OmAW9",
-        "outputId": "802618f9-03bf-4b48-b260-e9a3f12c6d73",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "HrIqG71OmAW9"
       },
-      "execution_count": 153,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['PERSON-RELATED FACTORS'], dtype='object')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 153
-        }
-      ]
+      "execution_count": 155,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Parse out the Critical Event Factor Numbering System from Tables3\n",
+        "\n",
+        "dataDict_Table3[\"Critical_Event\"][\"DATA\"] = {}  #Create Keys for PRF\n",
+        "ce_flattenedList = []\n",
+        "\n",
+        "#print(Tables3_criticalEvent.columns)\n",
+        "\n",
+        "for idx, series in Tables3_criticalEvent.iterrows(): \n",
+        "\n",
+        "  ce_desc = series['THIS VEHICLE LOSS OF CONTROL DUE TO: ']\n",
+        "\n",
+        "  kvPairList = getKVPairsSpaceDelimited(ce_desc)\n",
+        "  #print(kvPairList)\n",
+        "\n",
+        "  ce_flattenedList += flattenLists(kvPairList)\n",
+        "\n",
+        "for tup in ce_flattenedList:                       #Build the dictionary from tuples\n",
+        "  dataDict_Table3[\"Critical_Event\"][\"DATA\"][tup[0]] = tup[1]  \n",
+        "\n",
+        "  pass\n",
+        "  #print (series)\n"
+      ],
+      "metadata": {
+        "id": "44H2rBNMqWgZ"
+      },
+      "execution_count": 189,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Create a JSON object of the Table2 Data\n",
+        "json_Table3 = json.dumps(dataDict_Table3, indent = 4) \n"
+      ],
+      "metadata": {
+        "id": "iXnwEBs7qGmR"
+      },
+      "execution_count": 192,
+      "outputs": []
     }
   ]
 }
