--- a/DataDictionary.ipynb
+++ b/DataDictionary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM/4BxKVfl+q4P47wN5SQPL",
+      "authorship_tag": "ABX9TyPoJuyQXa/JPzAT0lQGTiQU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1318,12 +1318,12 @@
         "Tables5"
       ],
       "metadata": {
-        "id": "rKvzBF3Q5BIJ",
-        "outputId": "cb6f13f5-b1b8-4545-bad3-89c21c46e7d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "id": "rKvzBF3Q5BIJ",
+        "outputId": "cb6f13f5-b1b8-4545-bad3-89c21c46e7d1"
       },
       "execution_count": 228,
       "outputs": [
@@ -1489,11 +1489,11 @@
         "  dataDict_Table5[\"Vehicle_Make\"][\"DATA\"][tup[0]] = tup[1]"
       ],
       "metadata": {
-        "id": "8DfJenFq5Sul",
-        "outputId": "500d9639-fff1-4428-8327-ef70622945e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8DfJenFq5Sul",
+        "outputId": "500d9639-fff1-4428-8327-ef70622945e8"
       },
       "execution_count": 231,
       "outputs": [
@@ -1515,6 +1515,243 @@
         "id": "UtFNGEKD5_u-"
       },
       "execution_count": 233,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Extract the messy table data from the TABLES6 Sheet \n",
+        "  #(Manual inspection used to determine the cut points for the DFs)\n",
+        "Tables6 = pd.read_excel(DD, 'Tables6')\n",
+        "\n",
+        "Tables6"
+      ],
+      "metadata": {
+        "id": "O1AJcIwO6_gp",
+        "outputId": "98f151c6-a0ad-46c8-c1cb-7abcf14d6ad2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 222
+        }
+      },
+      "execution_count": 234,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                          CRASH TYPE  (From 2010 on)  \\\n",
+              "0  0=No Impact \\nCATEGORY I:  SINGLE DRIVER \\nCON...   \n",
+              "1  \\nCATEGORY II:  SAME TRAFFICWAY, SAME DIRECTIO...   \n",
+              "2                                               \\n\\n   \n",
+              "\n",
+              "                                          Unnamed: 1  \\\n",
+              "0  39=This Vehicle Impacted by Frontal Area of An...   \n",
+              "1  \\nCONFIGURATION H:  FORWARD IMPACT \\n54=This V...   \n",
+              "2                                                NaN   \n",
+              "\n",
+              "                                          Unnamed: 2  \n",
+              "0  70=Initial Same Directions (Turning Right) \\n7...  \n",
+              "1  CATEGORY V:  INTERSECTING PATHS (VEHICLE DAMAG...  \n",
+              "2                                                NaN  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-1190c38b-b941-4313-beda-54c51340cd7d\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>CRASH TYPE  (From 2010 on)</th>\n",
+              "      <th>Unnamed: 1</th>\n",
+              "      <th>Unnamed: 2</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0=No Impact \\nCATEGORY I:  SINGLE DRIVER \\nCON...</td>\n",
+              "      <td>39=This Vehicle Impacted by Frontal Area of An...</td>\n",
+              "      <td>70=Initial Same Directions (Turning Right) \\n7...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>\\nCATEGORY II:  SAME TRAFFICWAY, SAME DIRECTIO...</td>\n",
+              "      <td>\\nCONFIGURATION H:  FORWARD IMPACT \\n54=This V...</td>\n",
+              "      <td>CATEGORY V:  INTERSECTING PATHS (VEHICLE DAMAG...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>\\n\\n</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1190c38b-b941-4313-beda-54c51340cd7d')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-1190c38b-b941-4313-beda-54c51340cd7d button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-1190c38b-b941-4313-beda-54c51340cd7d');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 234
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Parse out the Crash Type Numbering System from Tables5\n",
+        "dataDict_Table6 = defaultdict(dict)                  #Build the Data Dictionary\n",
+        "                                                      #For all Table 3\n",
+        "\n",
+        "print(Tables6.columns)                                                      \n",
+        "\n",
+        "dataDict_Table6[\"Crash_Type\"][\"DATA\"] = {}  #Create Keys for VM\n",
+        "ct_flattenedList = []\n",
+        "\n",
+        "for idx, series in Tables6.iterrows(): \n",
+        "\n",
+        "  ct_desc1 = series['CRASH TYPE  (From 2010 on)']\n",
+        "  ct_desc2 = series['Unnamed: 1']\n",
+        "  ct_desc3 = series['Unnamed: 2']\n",
+        "\n",
+        "  kvPairList1 = getKVPairs(ct_desc1)                 #Get list (K,V) tuples for DATA\n",
+        "  kvPairList2 = getKVPairs(ct_desc2)\n",
+        "  kvPairList2 = getKVPairs(ct_desc3)\n",
+        "\n",
+        "  ct_flattenedList += flattenLists(kvPairList1)     #Flatten into a list of tuples\n",
+        "  ct_flattenedList += flattenLists(kvPairList2)\n",
+        "  ct_flattenedList += flattenLists(kvPairList3)\n",
+        "\n",
+        "for tup in ct_flattenedList:                       #Build the dictionary from tuples\n",
+        "  dataDict_Table6[\"Crash_Type\"][\"DATA\"][tup[0]] = tup[1]"
+      ],
+      "metadata": {
+        "id": "9I8g7Pua7N-v",
+        "outputId": "0187392a-38f7-4652-a80b-2e0c8a488d7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 236,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['CRASH TYPE  (From 2010 on)', 'Unnamed: 1', 'Unnamed: 2'], dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "json_Table6 = json.dumps(dataDict_Table6, indent = 4) "
+      ],
+      "metadata": {
+        "id": "o1pg5ZHl8Xg2"
+      },
+      "execution_count": 239,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "b98FGMKU8vYB"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
